train volume regulation and youtube embed added

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ h2, h3 {
     max-width: 100vw;
     position: relative;
 }
-#play-train, #form {
+#play-train, .form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -121,14 +121,14 @@ h2, h3 {
     margin: 20px 0;
     
 }
-#play-train h2, #form h2{
+#play-train h2, .form h2{
     margin: 10px 0;
 }
 #play-train h2 {
     font-weight: 800;
     font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-#spotify-player {
+.player-div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -160,13 +160,13 @@ iframe {
     
 }
 
-#form {
+.form {
     width:max-content;
     align-self: center;
     justify-self: center;
     
 }
-#url-input {
+.url-input {
     background: none;
     border: 2px white solid;
     padding: 10px;
@@ -178,10 +178,10 @@ iframe {
     font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
 }
-#url-input::placeholder {
+.url-input::placeholder {
     color: rgba(255, 255, 255, 0.7);
 }
-#url-input:focus {
+.url-input:focus {
     border-color: transparent;
     border-bottom: 2px white solid;
     outline: none;
@@ -256,7 +256,7 @@ iframe {
         margin: 7px;
         
     }
-    #form {
+    .form {
         width: initial;
         align-self: center;
         justify-self: center;
@@ -265,11 +265,16 @@ iframe {
         width: 100%;
         height: 350px;
     }
-     #form {
+    #youtube iframe {
+        width: 100%;
+        height: 240px;
+        font-size: 0.6em;
+    }
+     .form {
         
         margin: 10px 0;
     }
-    #url-input {
+    .url-input {
         width: 200px;
         font-size: 0.8em;
     }
@@ -286,4 +291,14 @@ iframe {
     .headphones {
         width: 26px
     }
+/*
+    .ytp-overflow-panel .ytp-watch-later-icon, .ytp-overflow-panel .ytp-watch-later-icon {
+        width: 40px;
+        height: 40px;
+        margin-bottom: 10px;
+    }
+    .ytp-big-mode .ytp-watch-later-title, .ytp-overflow-panel .ytp-watch-later-title,
+    .ytp-big-mode .ytp-watch-later-title, .ytp-overflow-panel .ytp-watch-later-title {
+        font-size: 12px;
+    }*/
 }
