--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-image: url(images/header4.gif);
+    background-image: url(images/header1.gif);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -38,7 +38,7 @@ header {
     background-image: url(images/header1.jpg);
     background-size: cover;
     background-position: center;
-    filter: blur(5px) brightness(0.5);
+    filter: blur(5px) brightness(0.7);
     z-index: 0;
     
 }
@@ -54,6 +54,10 @@ header h1 {
     font-size: 4.5em;
     font-family: 'Poppins','Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     margin: 0;
+    
+}
+header h2 {
+    margin-top: 0px;
     
 }
 #hedphones-div {
@@ -106,7 +110,7 @@ h2, h3 {
 #main {
     z-index: 1000;
     padding: 6% 8%;
-    backdrop-filter: blur(8px) brightness(0.5);
+    backdrop-filter: blur(8px) brightness(0.6);
     display: flex;
     flex-direction: column;
     padding-bottom: 100vh;
@@ -127,6 +131,9 @@ h2, h3 {
 #play-train h2 {
     font-weight: 800;
     font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+#volume-control {
+    margin: 5px;
 }
 .player-div {
     display: flex;
@@ -166,15 +173,20 @@ iframe {
     justify-self: center;
     
 }
+.form h3 {
+    margin-bottom: 5px;
+}
 .url-input {
     background: none;
-    border: 2px white solid;
+    border: none;
+    border-bottom: 2px white solid;
     padding: 10px;
-    border-radius: 9px;
+    border-radius: 7px;
     width: 250px;
     transition: all .3s, width .9s, border-radius .9s;
     color: white;
     text-align: center;
+    margin-bottom: 20px;
     font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
 }
@@ -182,8 +194,7 @@ iframe {
     color: rgba(255, 255, 255, 0.7);
 }
 .url-input:focus {
-    border-color: transparent;
-    border-bottom: 2px white solid;
+    
     outline: none;
     border-radius: 0px;
     width: 100%;
@@ -200,6 +211,7 @@ iframe {
     font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     letter-spacing: 1.5px;
+    box-shadow: 0 0px 15px rgba(0, 0, 0, 0.3);
 }
 .btn:hover {
     filter: invert();
@@ -215,6 +227,7 @@ iframe {
     padding: 15px 30px;
     font-family: 'Nanum Myeongjo', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 200;
+    box-shadow: none;
 }
 #changeBg:hover {
     color: rgb(255, 255, 255);
@@ -231,9 +244,39 @@ iframe {
         width: 80%;
         
     }
+    header h2 {
+        margin-top: 0px;
+        
+    }
+    .control div {
+        width: 8px;
+        height: 8px;
+        margin: 7px;
+        
+    }
+    .control {
+        bottom: 10px;
+    }
+    #hedphones-div {
+        width: 300px;
+        font-size: 0.75em;
+        bottom: 40px;
+    }
+    #hedphones-div h3 {
+        margin-bottom: 6px;
+    }
+    .headphones {
+        width: 26px
+    }
+    .form {
+        width: initial;
+        align-self: center;
+        justify-self: center;
+        text-align: center;
+    }
     iframe {
-        width: 100%;
-        height: 450px;
+        width: 85%;
+        height: 400px;
     }
 }
 @media (max-width: 720px) {
@@ -249,12 +292,22 @@ iframe {
         width: 80%;
         
     }
-    
+    header h1 {
+        line-height: 1em;
+        
+    }
+    header h2 {
+        margin-top: 10px;
+        
+    }
     .control div {
         width: 8px;
         height: 8px;
         margin: 7px;
         
+    }
+    .control {
+        bottom: 10px;
     }
     .form {
         width: initial;
@@ -286,7 +339,10 @@ iframe {
     #hedphones-div {
         width: 200px;
         font-size: 0.75em;
-        bottom: 60px;
+        bottom: 40px;
+    }
+    #hedphones-div h3 {
+        margin-bottom: 8px;
     }
     .headphones {
         width: 26px
