--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ header {
     background-size: cover;
     background-position: center;
     filter: blur(5px) brightness(0.7);
+    -moz-filter: blur(5px) brightness(0.7);
+    -ms-filter: blur(5px) brightness(0.7);
+    -o-filter: blur(5px) brightness(0.7);
     z-index: 0;
     
 }
@@ -111,6 +114,9 @@ h2, h3 {
     z-index: 1000;
     padding: 6% 8%;
     backdrop-filter: blur(8px) brightness(0.6);
+    -moz-filter: blur(8px) brightness(0.6);
+    -ms-filter: blur(8px) brightness(0.6);
+    -o-filter: blur(8px) brightness(0.6);
     display: flex;
     flex-direction: column;
     padding-bottom: 100vh;
@@ -133,7 +139,7 @@ h2, h3 {
     font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 #volume-control {
-    margin: 5px;
+    margin: 10px 5px;
 }
 .player-div {
     display: flex;
@@ -181,7 +187,7 @@ iframe {
     border: none;
     border-bottom: 2px white solid;
     padding: 10px;
-    border-radius: 7px;
+    border-radius: 3px;
     width: 250px;
     transition: all .3s, width .9s, border-radius .9s;
     color: white;
@@ -357,4 +363,129 @@ iframe {
     .ytp-big-mode .ytp-watch-later-title, .ytp-overflow-panel .ytp-watch-later-title {
         font-size: 12px;
     }*/
+}
+
+
+
+
+
+
+
+
+.volume-box {
+    display: flex;
+    align-items: center;
+}
+.volume-box img {
+    filter: invert();
+    width: 15px;
+    height: 15px;
+    margin: 0px;
+    opacity: 0.7;
+}
+input[type=range] {
+  -webkit-appearance: none;
+  width: 200px;
+  background: none;
+  transition: all .2s ease;
+  color:rgb(0, 0, 0)
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 16px;
+  cursor: pointer;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  border: none;
+}
+input[type=range]::-webkit-slider-thumb {
+  /*filter: invert();*/
+  border: none;
+  height: 16px;
+  width: 24px;
+  border-radius: 12px;
+  background: rgb(255, 255, 255);
+  /*background-image: url(images/volume.svg);*/
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: 0px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  color:rgb(0, 0, 0)
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: rgba(0, 0, 0, 0.6);
+  
+}
+
+input[type=range]::-moz-range-track {
+    width: 100%;
+  height: 16px;
+  cursor: pointer;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  border: none;
+}
+input[type=range]::-moz-range-thumb {
+    /*filter: invert();*/
+  border: none;
+  height: 16px;
+  width: 24px;
+  border-radius: 12px;
+  background: rgb(255, 255, 255);
+  /*background-image: url(images/volume.svg);*/
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: 0px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  color:rgb(0, 0, 0)
+}
+input[type=range]::-ms-track {
+    width: 100%;
+  height: 16px;
+  cursor: pointer;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  border: none;
+}
+input[type=range]::-ms-fill-lower {
+    background: rgb(255, 255, 255, .3);
+  
+}
+input[type=range]::-ms-fill-upper {
+    background: rgb(255, 255, 255, .7);
+}
+input[type=range]::-ms-thumb {
+    /*filter: invert();*/
+  border: none;
+  height: 16px;
+  width: 24px;
+  border-radius: 12px;
+  background: rgb(255, 255, 255);
+  /*background-image: url(images/volume.svg);*/
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: 0px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  color:rgb(0, 0, 0)
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: rgba(0, 0, 0, 0.5);
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: rgb(255, 255, 255, .6);
 }
